<resources>
    <string name="default_lang" translatable="false">System default</string>
    <string name="en_lang" translatable="false">English</string>
    <string name="cs_lang" translatable="false">Czech</string>
    <string name="af_lang" translatable="false">Afrikaans</string>
    <string name="bg_lang" translatable="false">Bulgarian</string>
    <string name="nl_lang" translatable="false">Dutch</string>
    <string name="fr_lang" translatable="false">French</string>
    <string name="de_lang" translatable="false">German</string>
    <string name="el_lang" translatable="false">Greek</string>
    <string name="zh_lang" translatable="false">Chinese</string>
    <string name="ga_lang" translatable="false">Irish</string>
    <string name="it_lang" translatable="false">Italian</string>
    <string name="ko_lang" translatable="false">Korean</string>
    <string name="lt_lang" translatable="false">Lithuanian</string>
    <string name="no_lang" translatable="false">Norwegian</string>
    <string name="pl_lang" translatable="false">Polish</string>
    <string name="pt_lang" translatable="false">Portuguese</string>
    <string name="pt_BR_lang" translatable="false">Portuguese, Brazilian</string>
    <string name="ro_lang" translatable="false">Romanian</string>
    <string name="ru_lang" translatable="false">Russian</string>
    <string name="sk_lang" translatable="false">Slovak</string>
    <string name="es_lang" translatable="false">Spanish</string>
    <string name="sv_lang" translatable="false">Swedish</string>
    <string name="tr_lang" translatable="false">Turkish</string>
    <string name="key_email_for_crash_report" translatable="false">email_for_crash_report</string>
    <string name="key_smscommunicator_settings" translatable="false">smscommunicator</string>
    <string name="key_open_humans_settings" translatable="false">open_humans</string>
    <string name="key_protection_settings" translatable="false">protection</string>
    <string name="key_absorption_category_settings" translatable="false">absorption_category_settings</string>
    <string name="key_insulin_oref_peak_settings" translatable="false">insulin_oref_peak_settings</string>
    <string name="key_ns_temporary_target_last_synced_id" translatable="false">ns_temporary_target_last_sync</string>
    <string name="key_ns_glucose_value_last_synced_id" translatable="false">ns_glucose_value_last_sync</string>
    <string name="key_ns_food_last_synced_id" translatable="false">ns_food_last_sync</string>
    <string name="key_ns_therapy_event_last_synced_id" translatable="false">ns_therapy_event_last_sync</string>
    <string name="key_smscommunicator_remotebolusmindistance" translatable="false">smscommunicator_remotebolusmindistance</string>
    <string name="key_openapsama_bolussnooze_dia_divisor" translatable="false">bolussnooze_dia_divisor</string>
    <string name="key_openapsama_autosens_adjusttargets" translatable="false">autosens_adjust_targets</string>
    <string name="key_ns_bolus_calculator_result_last_synced_id" translatable="false">ns_bolus_calculator_result_last_synced_id</string>
    <string name="key_ns_carbs_last_synced_id" translatable="false">ns_carbs_last_synced_id</string>
    <string name="key_ns_bolus_last_synced_id" translatable="false">ns_bolus_last_synced_id</string>
    <string name="key_ns_device_status_last_synced_id" translatable="false">ns_device_status_last_synced_id</string>
    <string name="key_ns_temporary_basal_last_synced_id" translatable="false">ns_temporary_basal_last_synced_id</string>
    <string name="key_ns_extended_bolus_last_synced_id" translatable="false">ns_extended_bolus_last_synced_id</string>
    <string name="key_ns_profile_switch_last_synced_id" translatable="false">profile_switch_last_synced_id</string>
    <string name="key_ns_offline_event_last_synced_id" translatable="false">ns_offline_event_last_synced_id</string>
    <string name="key_ns_profile_store_last_synced_timestamp" translatable="false">ns_profile_store_last_synced_timestamp</string>
    <string name="key_local_profile_last_change" translatable="false">local_profile_last_change</string>
    <string name="treatmentssafety_title">Treatments safety</string>
    <string name="treatmentssafety_maxbolus_title">Max allowed bolus [U]</string>
    <string name="treatmentssafety_maxcarbs_title">Max allowed carbs [g]</string>
    <string name="nav_preferences_plugin">%1$s Preferences</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_refreshtreatments">Refresh treatments from NS</string>
    <string name="nav_resetdb">Reset Databases</string>
    <string name="reset_db_confirm">Do you really want to reset the databases?</string>
    <string name="nav_exit">Exit</string>
    <string name="ns_sync_use_absolute_title">Always use basal absolute values</string>
    <string name="alert_dialog_permission_battery_optimization_failed">This device does not appear to support battery optimization whitelisting - you may experience performance issues.</string>
    <string name="description_actions">Some buttons to quickly access common features</string>
    <string name="description_config_builder">Used for configuring the active plugins</string>
    <string name="description_objectives">Learning program</string>
    <string name="description_food">Displays the food presets defined in Nightscout</string>
    <string name="description_insulin_rapid">Insulin preset for Humalog and NovoRapid / NovoLog</string>
    <string name="description_insulin_ultra_rapid">Insulin preset for Fiasp</string>
    <string name="description_insulin_lyumjev">Insulin preset for Lyumjev</string>
    <string name="description_insulin_free_peak">Allows you to define the peak of the insulin activity and should only be used by advanced users</string>
    <string name="description_loop">Activate or deactivate the implementation triggering the loop.</string>
    <string name="description_ns_client">Synchronizes your data with Nightscout</string>
    <string name="description_ama">State of the algorithm in 2017</string>
    <string name="description_smb">Most recent algorithm for advanced users</string>
    <string name="description_overview">Displays the current state of your loop and buttons for most common actions</string>
    <string name="description_persistent_notification">Shows an ongoing notification with a short overview of what your loop is doing</string>
    <string name="description_profile_local">Define a profile which is available offline.</string>
    <string name="description_pump_mdi">Pump integration for people who do multiple daily injections for their diabetes therapy</string>
    <string name="description_pump_virtual">Pump integration for pumps which don\'t have any driver yet (Open Loop)</string>
    <string name="description_sensitivity_aaps">Sensitivity is calculated the same way like Oref0, but you can specify timeframe to the past. Minimal carb absorption is calculated from max carb absorption time from preferences.</string>
    <string name="description_sensitivity_oref1">Sensitivity is calculated from 8h or 24h data in the past (using either which is more sensitive). Carbs (if not absorbed) are cut after time specified in preferences. Plugin also calculates UAM.</string>
    <string name="description_sensitivity_weighted_average">Sensitivity is calculated as a weighted average from deviations. Newer deviations have higher weight. Minimal carb absorption is calculated from max carb absorption time from preferences. This algorithm is the fastest in following sensitivity changes.</string>
    <string name="description_source_eversense">Receive BG values from the patched Eversense app.</string>
    <string name="description_source_glimp">Receive BG values from Glimp.</string>
    <string name="description_source_mm640g">Receive BG values from the 600SeriesAndroidUploader.</string>
    <string name="description_source_ns_client">Downloads BG data from Nightscout</string>
    <string name="description_source_xdrip">Receive BG values from xDrip+.</string>
    <string name="description_treatments">Saves all treatments that were made</string>
    <string name="description_wear">Monitor and control AndroidAPS using your WearOS watch.</string>
    <string name="description_xdrip_status_line">Show information about your loop on your xDrip+ watchface.</string>
    <string name="description_sms_communicator">Remote control AndroidAPS using SMS commands.</string>
    <string name="treatments_insulin_label_string">Insulin:</string>
    <string name="treatments_carbs_label_string">Carbs:</string>
    <string name="treatments_iob_label_string">IOB:</string>
    <string name="sms_iob">IOB:</string>
    <string name="treatments_iobtotal_label_string">Total IOB:</string>
    <string name="treatments_iobactivitytotal_label_string">Total IOB activity:</string>
    <string name="tempbasals_realduration_label_string">Dur:</string>
    <string name="tempbasals_netratio_label_string">Ratio:</string>
    <string name="tempbasals_netinsulin_label_string">Ins:</string>
    <string name="tempbasals_iob_label_string">IOB:</string>
    <string name="tempbasals_iobtotal_label_string">Total IOB:</string>
    <string name="treatments_wizard_bg_label">BG</string>
    <string name="treatments_wizard_tt_label">TT</string>
    <string name="treatments_wizard_carbs_label">Carbs</string>
    <string name="treatments_wizard_correction_label">Corr</string>
    <string name="treatments_wizard_bolusiob_label">Bolus IOB</string>
    <string name="openapsma_run">Run now</string>
    <string name="vitualpump_label">VIRTUAL PUMP</string>
    <string name="openapsma_lastrun_label">Last run</string>
    <string name="openapsma_inputparameters_label">Input parameters</string>
    <string name="openapsma_glucosestatus_label">Glucose status</string>
    <string name="openapsma_currenttemp_label">Current temp</string>
    <string name="openapsma_iobdata_label">IOB data</string>
    <string name="openapsma_profile_label">Profile</string>
    <string name="openapsma_mealdata_label">Meal data</string>
    <string name="result">Result</string>
    <string name="result_insulin_carbs">Result: %1$s %2$s</string>
    <string name="openapsma_noglucosedata">No glucose data available</string>
    <string name="openapsma_request_label">Request</string>
    <string name="delta">Delta</string>
    <string name="sms_delta">Delta:</string>
    <string name="configbuilder">Config Builder</string>
    <string name="overview">Overview</string>
    <string name="treatments">Treatments</string>
    <string name="virtualpump">Virtual Pump</string>
    <string name="careportal">Careportal</string>
    <string name="configbuilder_pump">Pump</string>
    <string name="configbuilder_pump_description">Which pump would you like to use with AndroidAPS?</string>
    <string name="configbuilder_profile">Profile</string>
    <string name="configbuilder_profile_description">Which profile should AndroidAPS use?</string>
    <string name="configbuilder_aps">APS</string>
    <string name="configbuilder_aps_description">Which APS algorithm should make therapy adjustments?</string>
    <string name="configbuilder_general">General</string>
    <string name="setbasalquestion">Accept new temp basal:</string>
    <string name="overview_treatment_label">Treatment</string>
    <string name="overview_calculator_label">Calculator</string>
    <string name="nav_export">Export settings</string>
    <string name="nav_import">Import settings</string>
    <string name="quickwizard">QuickWizard</string>
    <string name="overview_calibration">Calibration</string>
    <string name="overview_insulin_label">Insulin</string>
    <string name="overview_cgm">CGM</string>
    <string name="send_all_logs">Send Logs by Email</string>
    <string name="delete_logs">Delete Logs</string>
    <string name="nav_logsettings">Log settings</string>
</resources>