<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overview_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <info.nightscout.androidaps.utils.ui.SingleClickButton
        android:id="@+id/accept_temp_button"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/setbasalquestion"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingStart="2dp">

        <info.nightscout.androidaps.utils.ui.SingleClickButton
            android:id="@+id/treatment_button"
            style="?android:attr/buttonStyle"
            android:layout_marginTop="-18dp"
            android:layout_marginEnd="2dp"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/ic_treatments_2"
            android:text="@string/overview_treatment_label"
            android:textSize="0sp"
            android:visibility="gone"
            tools:ignore="SmallSp" />

        <info.nightscout.androidaps.utils.ui.SingleClickButton
            android:id="@+id/insulin_button"
            style="?android:attr/buttonStyle"
            android:layout_marginTop="-18dp"
            android:layout_marginEnd="2dp"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/ic_bolus_2"
            android:text="@string/overview_insulin_label"
            android:textSize="0sp"
            tools:ignore="SmallSp" />

        <info.nightscout.androidaps.utils.ui.SingleClickButton
            android:id="@+id/carbs_button"
            style="?android:attr/buttonStyle"
            android:layout_marginTop="-18dp"
            android:layout_marginEnd="2dp"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/ic_cp_bolus_carbs_2"
            android:text="carbs"
            android:textSize="0sp"
            tools:ignore="SmallSp" />

        <info.nightscout.androidaps.utils.ui.SingleClickButton
            android:id="@+id/wizard_button"
            style="?android:attr/buttonStyle"
            android:layout_marginTop="-18dp"
            android:layout_marginEnd="2dp"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/ic_calculator_2"
            android:text="@string/overview_calculator_label"
            android:textSize="0sp"
            tools:ignore="SmallSp" />

        <info.nightscout.androidaps.utils.ui.SingleClickButton
            android:id="@+id/calibration_button"
            style="?android:attr/buttonStyle"
            android:layout_marginTop="-18dp"
            android:layout_marginEnd="2dp"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/ic_cp_bgcheck_2"
            android:text="@string/overview_calibration"
            android:textSize="0sp"
            android:visibility="gone"
            tools:ignore="SmallSp" />

        <info.nightscout.androidaps.utils.ui.SingleClickButton
            android:id="@+id/cgm_button"
            style="?android:attr/buttonStyle"
            android:layout_marginTop="-18dp"
            android:layout_marginEnd="2dp"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/ic_xdrip_2"
            android:text="@string/overview_cgm"
            android:textSize="0sp"
            android:visibility="gone"
            tools:ignore="SmallSp" />

        <info.nightscout.androidaps.utils.ui.SingleClickButton
            android:id="@+id/quick_wizard_button"
            style="?android:attr/buttonStyle"
            android:layout_marginTop="-18dp"
            android:layout_marginEnd="2dp"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/ic_quick_wizard_2"
            android:text="@string/quickwizard"
            android:textSize="0sp"
            tools:ignore="SmallSp"/>

    </LinearLayout>

</LinearLayout>