<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".plugins.general.maintenance.MaintenanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="Wartungszentrale"
            android:textColor="@color/rig22Blue"
            android:textSize="20sp"/>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            app:columnCount="2">

            <info.nightscout.androidaps.utils.ui.SingleClickButton
                android:id="@+id/nav_logsettings"
                style="@style/ButtonSmallFontStyle"
                android:background="@color/black"
                android:drawableTop="@drawable/ic_zahnrad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:text="@string/nav_logsettings"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_column="0"
                app:layout_columnWeight="0.5"
                app:layout_gravity="fill"
                app:layout_row="0" />


            <info.nightscout.androidaps.utils.ui.SingleClickButton
                android:id="@+id/log_send"
                android:background="@color/black"
                android:drawableTop="@drawable/ic_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:text="@string/send_all_logs"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0" />

            <info.nightscout.androidaps.utils.ui.SingleClickButton
                android:id="@+id/log_delete"
                android:drawableTop="@drawable/ic_delete_logs"
                android:background="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.5"
                android:text="@string/delete_logs"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1" />

            <info.nightscout.androidaps.utils.ui.SingleClickButton
                android:id="@+id/nav_export"
                android:background="@color/black"
                android:drawableTop="@drawable/ic_export"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.5"
                android:text="@string/nav_export"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1" />

            <info.nightscout.androidaps.utils.ui.SingleClickButton
                android:id="@+id/nav_import"
                android:background="@color/black"
                android:drawableTop="@drawable/ic_import"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="0.5"
                android:text="@string/nav_import"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="2" />

            <info.nightscout.androidaps.utils.ui.SingleClickButton
                android:id="@+id/nav_resetdb"
                android:background="@color/black"
                android:drawableTop="@drawable/ic_resetdb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="0.5"
                android:text="@string/nav_resetdb"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="2" />

        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>

</LinearLayout>

